test/testdata/classes/blank_field_assignment_error.lox
class Foo {}
var foo = Foo();
// error: _ cannot be used as a field name
// lint error: _ cannot be used as a field name
foo._ = 2;
